add Products Page

--- a/frontend/src/styles/signup.css
+++ b/frontend/src/styles/signup.css
@@ -1,11 +1,16 @@
 .signup-container {
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
+  width: 60%; /* Set a percentage width for responsiveness */
+  max-width: 500px; /* Set a maximum width for larger screens */
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
   
   .signup-form {
     display: flex;
@@ -47,5 +52,11 @@
   .error-message {
     color: #e74c3c;
     font-size: 14px;
+  }
+  @media (max-width: 600px) {
+    .signup-container {
+      width: 250px;
+      height:fit-content;  /* Adjust the width for smaller screens */
+    }
   }
   
