--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -1,11 +1,15 @@
-
 .login-container {
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 60%; /* Set a percentage width for responsiveness */
+  max-width: 500px; /* Set a maximum width for larger screens */
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   }
   
   .login-form {
@@ -28,7 +32,7 @@
   }
   
   button {
-    background-color: #3498db;
+    background-color:#4caf50;
     color: white;
     padding: 12px;
     border: none;
@@ -38,7 +42,7 @@
   }
   
   button:hover {
-    background-color: #2980b9;
+    background-color:#4caf50;
   }
   
   .error-message-container {
@@ -48,5 +52,12 @@
   .error-message {
     color: #e74c3c;
     font-size: 14px;
+  }
+
+  @media (max-width: 600px) {
+    .login-container {
+      width: 250px;
+      height:fit-content; /* Adjust the width for smaller screens */
+    }
   }
   
